Super WIP of tab interface.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/tailwind.css">
+  <title>Fragment</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/codemirror.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="bg-gray-900">
