--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Figment</title>
-    <link rel="stylesheet" href="css/codemirror.css" />
-    <link rel="stylesheet" href="css/main.pcss" />
+    <link rel="stylesheet" href="../../css/codemirror.css" />
+    <link rel="stylesheet" href="../../css/main.pcss" />
+    <link rel="stylesheet" href="../../node_modules/codemirror/theme/darcula.css">
   </head>
   <body class="bg-gray-900">
     <div id="root" class="flex"></div>
-    <script src="js/ui/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
