Fix syntax highlighting.

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -6,7 +6,7 @@
     <title>Figment</title>
     <link rel="stylesheet" href="../../css/codemirror.css" />
     <link rel="stylesheet" href="../../css/main.pcss" />
-    <link rel="stylesheet" href="../../node_modules/codemirror/theme/darcula.css">
+    <link rel="stylesheet" href="../../node_modules/codemirror/theme/darcula.css" />
   </head>
   <body class="bg-gray-900">
     <div id="root" class="flex"></div>
