Allow viewer to go fullscreen.

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="../../css/codemirror.css" />
     <link rel="stylesheet" href="../../css/main.pcss" />
     <link rel="stylesheet" href="../../node_modules/codemirror/theme/darcula.css" />
+    <link
+      rel="stylesheet"
+      href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+    />
   </head>
   <body class="bg-gray-900">
     <div id="root" class="flex"></div>
