WIP switching to Vite.

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Figment</title>
-    <link rel="stylesheet" href="../../css/codemirror.css" />
-    <link rel="stylesheet" href="../../css/main.pcss" />
-    <link rel="stylesheet" href="../../node_modules/codemirror/theme/darcula.css" />
-    <link
-      rel="stylesheet"
-      href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
-    />
+    <link rel="stylesheet" href="./css/codemirror.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <!-- <link rel="stylesheet" href="./node_modules/codemirror/theme/darcula.css" />
+    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css" /> -->
   </head>
-  <body class="bg-gray-900">
-    <div id="root" class="flex"></div>
-    <script src="./index.js"></script>
+  <body className="bg-gray-900">
+    <div id="root" className="flex"></div>
+    <script type="module" src="./index.jsx"></script>
   </body>
 </html>
