Try a different method of packaging pose detection.

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -11,6 +11,7 @@
   </head>
   <body className="bg-gray-900">
     <div id="root" className="flex"></div>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
     <script type="module" src="./index.jsx"></script>
   </body>
 </html>
