Better splitter management.

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Figment</title>
@@ -8,9 +9,11 @@
     <link rel="stylesheet" href="./css/main.css" />
     <!-- <link rel="stylesheet" href="./node_modules/codemirror/theme/darcula.css" />
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css" /> -->
-  </head>
-  <body className="bg-gray-900">
-    <div id="root" className="flex"></div>
+</head>
+
+<body className="bg-gray-900">
+    <div id="root"></div>
     <script type="module" src="./index.jsx"></script>
-  </body>
+</body>
+
 </html>
