Upgrade a bunch of dependencies
There were some issues with building vite/tailwind and all required dependencies, they should be fixed now:
- Vite has index.html in the root, and uses that
- Tailwind is upgrade to v4, we needed to get all the paths correct
- onnxruntime-web needed the newer version of its .wasm dependency to match the runtime version.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Figment</title>
-    <link rel="stylesheet" href="./css/codemirror.css" />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="/src/ui/css/codemirror.css" />
+    <!-- <link rel="stylesheet" href="./css/main.css" /> -->
+    <link href="/src/ui/css/main.css" rel="stylesheet" />
+
     <!-- <link rel="stylesheet" href="./node_modules/codemirror/theme/darcula.css" />
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css" /> -->
-</head>
+  </head>
 
-<body className="bg-gray-900">
+  <body className="bg-gray-900">
     <div id="root"></div>
-    <script type="module" src="./index.jsx"></script>
-</body>
-
+    <script type="module" src="/src/ui/index.jsx"></script>
+  </body>
 </html>
